tests/algorithms/x/Kotlin/neural_network/input_data.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/algorithms/x/Kotlin/neural_network/input_data.kt:79:47: error: type inference failed. Expected type mismatch: inferred type is MutableList<MutableList<Int>> but MutableList<Any?> was expected
        var batch_images: MutableList<Any?> = concat(images_rest, images_new)
                                              ^
/workspace/mochi/tests/algorithms/x/Kotlin/neural_network/input_data.kt:80:47: error: type inference failed. Expected type mismatch: inferred type is MutableList<MutableList<Int>> but MutableList<Any?> was expected
        var batch_labels: MutableList<Any?> = concat(labels_rest, labels_new)
                                              ^
/workspace/mochi/tests/algorithms/x/Kotlin/neural_network/input_data.kt:82:55: error: type mismatch: inferred type is MutableList<Any?> but MutableList<MutableList<Int>> was expected
        return BatchResult(dataset = new_ds, images = batch_images, labels = batch_labels)
                                                      ^
/workspace/mochi/tests/algorithms/x/Kotlin/neural_network/input_data.kt:82:78: error: type mismatch: inferred type is MutableList<Any?> but MutableList<MutableList<Int>> was expected
        return BatchResult(dataset = new_ds, images = batch_images, labels = batch_labels)
                                                                             ^
